Implementação da tela index

--- a/src/Views/static/css/LoginStyle.css
+++ b/src/Views/static/css/LoginStyle.css
@@ -1,8 +1,11 @@
 @charset "UTF 8";
 
 
-.img-style{
-    text-align: center;
+.img-style img {
+    display: block;
+    margin: 0 auto; 
+    width: 350px;
+    height: 350px;
 
 }
 
