--- a/src/Views/static/css/home.css
+++ b/src/Views/static/css/home.css
@@ -42,6 +42,9 @@ body{
     padding: 6.25px;
     opacity: 1;
 }
+.logout:hover{
+    transform: scale(1.05);
+}
 
 .title{
     position: fixed;
@@ -63,7 +66,6 @@ body{
 .container{
     position: fixed;
     display: flex;
-    flex-wrap: wrap;
     width: calc(100% - 10%);
     height: 25%;
     top: 278px;
@@ -81,10 +83,12 @@ body{
     opacity: 1;
     background: #FFFFFF;
     cursor: pointer;
+    border: none;
 }
 
 .box:hover{
-    transform: scale(1.02);
+    transform: scale(1.05);
+    background: #E4E4E4;
 }
 .boxImage{
     position: relative;
@@ -152,6 +156,11 @@ body{
         cursor: pointer;
     }
 
+    .box:hover{
+        transform: scale(1.05);
+        background: #ffffff;
+    }
+
     .box h1{
         position: relative;
         font: 600 16px "Roboto", sans-serif;
@@ -212,6 +221,11 @@ body{
         cursor: pointer;
     }
 
+    .box:hover{
+        transform: scale(1.05);
+        background: #ffffff;
+    }
+
     .box h1{
         position: relative;
         font: 600 1rem "Roboto", sans-serif;
@@ -228,5 +242,70 @@ body{
         height: 15%;
         left: 10%;
         text-align: left;
+    }
+
+    @media screen and (max-width: 450px){
+        .title{
+            position: fixed;
+            display: block;
+            top: 165px;
+            left: 10%;
+            width: 280px;
+            height: 60px;
+        }
+
+        .title h1{
+            position: relative;
+            display: inherit;
+            font: 600 2rem "Poppins", sans-serif;
+            margin: auto auto auto auto;
+            height: 60px;
+        }
+
+        .container{
+            position: fixed;
+            display: flex;
+            flex-wrap: wrap;
+            width: calc(100% - 10%);
+            height: 20%;
+            top: 250px;
+            left: 5%;
+            gap: 20px;
+            opacity: 1;
+        }
+
+        .box{
+            position: relative;
+            display: block;
+            width: 40%;
+            height: 100%;
+            border-radius: 6px 6px 6px 6px;
+            opacity: 1;
+            background: #FFFFFF;
+            cursor: pointer;
+        }
+
+        .box:hover{
+            transform: scale(1.05);
+            background: #ffffff;
+        }
+
+        .box h1{
+            position: relative;
+            font: 600 16px "Roboto", sans-serif;
+            width: 80%;
+            height: 15%;
+            left: 10%;
+            text-align: left;
+        }
+
+        .box p{
+            position: relative;
+            font: 450 12px "Roboto", sans-serif;
+            width: 80%;
+            height: 15%;
+            left: 10%;
+            text-align: left;
+        }
     }
 }
