--- a/src/Views/static/css/LoginStyle.css
+++ b/src/Views/static/css/LoginStyle.css
@@ -129,3 +129,22 @@ p{
 a{
     color: #000000;
 }
+
+.alert{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.message{
+    font: 600 0.85rem/1.5 "Poppins", sans-serif;
+    text-align: center;
+    width: 150px;
+    height: 20px;
+    border-radius: 4px 4px 4px 4px;
+    background: indianred;
+    /*background: #cc0000;*/
+    /*color: #d8000c;*/
+    /*background: #ffbaba;*/
+}
