--- a/src/Views/static/css/cadastro.css
+++ b/src/Views/static/css/cadastro.css
@@ -52,6 +52,24 @@ body {
   background: linear-gradient(#ffbb12, #fed33b);
 }
 
+.alert{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.message{
+  font: 600 0.85rem/1.5 "Poppins", sans-serif;
+  text-align: center;
+  width: 150px;
+  height: 20px;
+  border-radius: 4px 4px 4px 4px;
+  background: indianred;
+  /*background: #cc0000;*/
+  /*color: #d8000c;*/
+  /*background: #ffbaba;*/
+}
 @media screen and (max-width: 600px) {
   .form input {
     width: calc(100% - 20px);
